# ClayEngine

./: .gitmodules  CMakeLists.txt  README.md  build-tool.ps1  build-tool.sh
include/Clay/Application/: App.h  CameraController.h  InputHandler.h  Logger.h  Resource.h  Scene.h
include/Clay/Audio/: Audio.h  AudioManager.h  SoundDevice.h  SoundSource.h
include/Clay/Entity/: Entity.h
include/Clay/Entity/Physics/: BoxCollider2D.h  CircleCollider2D.h  Collider.h  Collider2.h  RigidBodyComponent.h
include/Clay/Entity/Render/: BaseRenderable.h  ModelRenderable.h  SpriteRenderable.h  TextRenderable.h
include/Clay/GUI/: ImGuiComponent.h  Window.h
include/Clay/Graphics/: Camera.h  Font.h  Mesh.h  Model.h  Renderer.h  Shader.h  SpriteSheet.h  Texture.h
include/Clay/Utils/: Utils.h
include/clay/application/: App.h  CameraController.h  Resource.h  Scene.h
include/clay/application/common/: BaseScene.h  IApp.h  IInputHandler.h  Resources.h
include/clay/application/desktop/: AppDesktop.h  CameraController.h  InputHandlerDesktop.h
include/clay/application/xr/: AppXR.h  CameraXR.h  SceneXR.h
include/clay/audio/: Audio.h  AudioManager.h  SoundSource.h
include/clay/entity/: Entity.h
include/clay/entity/physics/: BoxCollider2D.h  CircleCollider2D.h  Collider.h  Collider2.h  ColliderOLD.h  PhysicsComponentBase.h  PolygonCollider2D.h  RigidBodyComponent.h
include/clay/entity/render/: BaseRenderable.h  ModelRenderable.h  SpriteRenderable.h  TextRenderable.h
include/clay/graphics/: LightSource.h  Mesh.h  Model.h  Renderer.h  Shader.h  SpriteSheet.h  Texture.h
include/clay/graphics/common/: Camera.h  Font.h  IGraphicsAPI.h  IGraphicsContext.h  Mesh.h  Model.h  Renderer.h  ShaderProgram.h  SpriteSheet.h  Texture.h
include/clay/graphics/opengl/: GraphicsAPIOpenGL.h
include/clay/graphics/opengles/: GraphicsAPIOpenGLES.h  GraphicsContextXR.h
include/clay/gui/: ImGuiComponent.h  Window.h
include/clay/gui/common/: IWindow.h
include/clay/gui/desktop/: ImGuiComponent.h  WindowDesktop.h
include/clay/gui/xr/: ImGuiComponentXR.h
include/clay/utils/: Utils.h
include/clay/utils/common/: Logger.h  Utils.h
include/clay/utils/desktop/: DesktopUtils.h  UtilsDesktop.h
src/Application/: App.cpp  CameraController.cpp  InputHandler.cpp  Resource.cpp  Scene.cpp
src/Audio/: Audio.cpp  AudioManager.cpp  SoundDevice.cpp  SoundSource.cpp
src/Entity/: Entity.cpp
src/Entity/Physics/: BoxCollider2D.cpp  CircleCollider2D.cpp  Collider.cpp  Collider2.cpp  ColliderOLD.cpp  PhysicsComponentBase.cpp  PolygonCollider2D.cpp  RigidBodyComponent.cpp
src/Entity/Render/: BaseRenderable.cpp  ModelRenderable.cpp  SpriteRenderable.cpp  TextRenderable.cpp
src/GUI/: ImGuiComponent.cpp  Window.cpp
src/Graphics/: Camera.cpp  Font.cpp  LightSource.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  SpriteSheet.cpp  Texture.cpp
src/Utils/: Utils.cpp
src/clay/application/: App.cpp  CameraController.cpp  InputHandler.cpp  Resource.cpp  Scene.cpp
src/clay/application/common/: BaseScene.cpp  IApp.cpp  IInputHandler.cpp  Resources.cpp
src/clay/application/deskop/: AppDesktop.cpp  CameraController.cpp  InputHandlerDesktop.cpp
src/clay/application/xr/: AppXR.cpp  CameraXR.cpp  InputHandlerXR.cpp  SceneXR.cpp
src/clay/audio/: Audio.cpp  AudioManager.cpp  SoundDevice.cpp
src/clay/entity/: Entity.cpp
src/clay/entity/physics/: BoxCollider2D.cpp  CircleCollider2D.cpp  Collider.cpp  Collider2.cpp  ColliderOLD.cpp  PhysicsComponentBase.cpp  PolygonCollider2D.cpp  RigidBodyComponent.cpp
src/clay/entity/render/: BaseRenderable.cpp  ModelRenderable.cpp  SpriteRenderable.cpp  TextRenderable.cpp
src/clay/graphics/: Camera.cpp  Font.cpp  LightSource.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  SpriteSheet.cpp  Texture.cpp
src/clay/graphics/common/: Camera.cpp  Font.cpp  IGraphicsAPI.cpp  IGraphicsContext.cpp  LightSource.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  SpriteSheet.cpp  Texture.cpp
src/clay/graphics/opengl/: GraphicsAPIOpenGL.cpp
src/clay/graphics/opengles/: GraphicsAPIOpenGLES.cpp
src/clay/gui/: ImGuiComponent.cpp  Window.cpp
src/clay/gui/common/: IWindow.cpp
src/clay/gui/desktop/: ImGuiComponent.cpp  WindowDesktop.cpp
src/clay/gui/xr/: ImGuiComponentXR.cpp
src/clay/utils/: Utils.cpp
src/clay/utils/common/: Utils.cpp
src/clay/utils/desktop/: DesktopUtils.cpp  UtilsDesktop.cpp
test/: CMakeLists.txt
test/Application/: AppTest.cpp
